# Comfy-Pilot

./: .gitignore  CLAUDE.md  README.md  __init__.py  mcp_server.py  pyproject.toml
analytics/: ducklake_init.sql  ducklake_queries.sql
comfy-skills/: pyproject.toml
comfy-skills/src/comfy_skills/: cli.py
js/: claude-code.js
skills/: skill-registry.json
